sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:2: error: Missing closing brace `}' assumed here
def combSort() {gap:Int=getValueCount();test:Boolean=false
^AlgCombSort:2: error: expected class or object definition
def combSort() {gap:Int=getValueCount();test:Boolean=false
^